# sifu

./: .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
data/: keycodes.json
docs/superpowers/plans/: 2026-04-01-sifubar-native-capture.md
docs/superpowers/specs/: 2026-04-01-sifubar-native-capture-design.md
examples/capabilities.d/: gmail.yaml  slack.yaml  vercel.yaml
extras/SifuBar/: Package.swift  build-app.sh  sifubar.py
extras/SifuBar/SifuBar/: Config.swift  Info.plist  PermissionManager.swift  SifuBarApp.swift
extras/SifuBar/SifuBar/Bridge/: CLIBridge.swift  LoginItemManager.swift
extras/SifuBar/SifuBar/CaptureEngine/: AppTracker.swift  EventTapManager.swift  ScreenshotCapture.swift  TextAggregator.swift
extras/SifuBar/SifuBar/Storage/: EventStore.swift  SessionManager.swift
extras/swiftbar/: sifu.1s.sh  sifu.5s.sh
src/sifu/: __init__.py  cli.py  config.py  daemon.py  events.py
src/sifu/automator/: generator.py
src/sifu/bar/: app.py
src/sifu/capture/: apps.py  keyboard.py  mouse.py  screenshots.py
src/sifu/classifier/: __init__.py  classifier.py  discovery.py  spec.py
src/sifu/coach/: analyzer.py  tools.py
src/sifu/compiler/: sop.py
src/sifu/patterns/: engine.py
src/sifu/storage/: db.py  disk.py
tests/: test_capture.py  test_classifier.py  test_compiler.py  test_discovery.py  test_patterns.py  test_spec.py
